# pre-commit-hook-prohibit-string

./: .pre-commit-hooks.yaml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml  main.yml
pre_commit_hooks/: _version.py  prohibit_string.py
prohibit_string/: hook.py
tests/: test_prohibit_string.py
