[metadata]
name = pre_commit_prohibit_str
url = 
author = devanshshukla99
author_email = devanshshukla99@outlook.com
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.rst
license = BSD
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    pytest>=4.6

[options.packages.find]
exclude =
    */tests/*

[options.entry_points]
console_scripts =
    prohibit-string = pre_commit_hooks.prohibit_string:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
